# NarrativeSceneGraph

./: .env.enc.yaml  .envrc  .gitignore  .sops.yaml  EXAMPLE_USAGE.md  Makefile  README.md  TODO.md  demo_graph.dot  demo_output.twee  flake.nix  graph_demo.py  main.py  pyproject.toml  quiz_demo.py  requirements-minimal.txt  requirements.txt  simple_demo.py
pdf2twine/: cli.py
pdf2twine/exporter/: __init__.py  coordinates.py  twine.py
pdf2twine/graph/: __init__.py  extract.py  serialize.py  summarize.py
pdf2twine/loader/: __init__.py  extract.py
pdf2twine/quiz/: __init__.py  generate.py
pdf2twine/segmenter/: __init__.py  split.py
tests/: test_cli.py  test_exporter.py  test_graph.py  test_loader.py  test_quiz.py  test_segmenter.py
